<resources>
    <string name="app_name">TennisSimulation</string>
    <string name="play_button">Play now</string>
    <string name="instructions_button">Check\ninstructions</string>
    <string name="ball_content_description">Tennis ball</string>
    <string name="instructions_text">This app simulates a tennis game between user and computer. Click on the button at the bottom when it\'s your turn. Click on the button on the top when it\'s computer\'s turn.\n\nBoth results are assigned randomly. Good luck!</string>
    <string name="instructions_title">Instructions</string>
    <string name="terrain_image_description">Tennis terrain</string>
    <string name="computer_turn">Computer\'s Turn</string>
    <string name="player_turn">Your Turn</string>
    <string name="go_button">Go!</string>
    <string name="reset_go_button">Reset</string>
    <string name="share">Share Score</string>
</resources>
