<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.elena.tennissimulation.PlayActivity">
    <ImageView
        android:contentDescription="@string/terrain_image_description"
        android:src="@drawable/terrain"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:id="@+id/image_view_terrain"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:drawablePadding="5dp"
        android:id="@+id/text_view_computer_turn"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_turn"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/player_turn"
        android:drawableStart="@drawable/player_turn"
        android:layout_marginBottom="300dp"
        app:layout_constraintRight_toRightOf="@+id/image_view_terrain"
        app:layout_constraintLeft_toLeftOf="@+id/image_view_terrain"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_terrain"
        />

    <TextView
        android:drawablePadding="5dp"
        android:id="@+id/text_view_player_turn"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_turn"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/player_turn"
        android:drawableStart="@drawable/player_turn"
        android:layout_marginTop="290dp"
        app:layout_constraintRight_toRightOf="@+id/image_view_terrain"
        app:layout_constraintLeft_toLeftOf="@+id/image_view_terrain"
        app:layout_constraintTop_toTopOf="@+id/image_view_terrain" />

    <Button
        android:onClick="onGoClick"
        android:id="@+id/button_go"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:textSize="20sp"
        android:background="@color/colorAccent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_player_turn"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <ScrollView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_go"
        android:id="@+id/scroll_view_score"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/text_view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Score: Fifteen Love"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />

    </ScrollView>

    <Button
        android:textSize="20sp"
        android:background="@color/colorAccent"
        android:onClick="onShareClick"
        android:id="@+id/button_share"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_player_turn"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
